--- a/tmux.conf
+++ b/tmux.conf
@@ -1,15 +1,11 @@
 # improve colors
 set -g default-terminal 'screen-256color'
+set-window-option -g automatic-rename on
+set-option -g set-titles on
+set-option -g set-clipboard off
+setw -g monitor-activity on
 
-# act like vim
-#setw -g mode-keys vi
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
-
+# set Ctrl-s prefix
 set -g prefix2 C-s
 
 # start window numbers at 1 to match keyboard order with tmux window order
@@ -44,3 +40,41 @@ set-window-option -g xterm-keys on
 
 # Local config
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
+
+
+# intuitive split keys
+bind-key \ split-window -h
+bind-key s split-window -h
+bind-key - split-window -v
+bind-key v split-window -v
+
+# Use Alt-vim keys without prefix key to switch panes
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
+# Use Alt-arrow keys without prefix key to switch panes
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# Shift arrow to switch windows
+bind -n S-Left  previous-window
+bind -n S-Right next-window
+
+# No delay for escape key press
+set -sg escape-time 0
+
+# Reload tmux config
+bind r source-file ~/.tmux.conf
+
+# Set basic status
+set -g status-interval 60
+set -g status-left-length 30
+set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
+
+# Use version specific configs
+if-shell "tmux -V | awk ' {split($2, ver, \".\"); if (ver[1] < 2) exit 1 ; else if (ver[1] == 2 && ver[2] < 1) exit 1 }' " 'source ~/.tmux/gt_2.0.conf' 'source ~/.tmux/lt_2.1.conf'
+
