--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,4 @@
 # improve colors
-set -g default-terminal 'screen-256color'
 set-window-option -g automatic-rename on
 set-option -g set-titles on
 set-option -g set-clipboard off
@@ -38,10 +37,6 @@ unbind-key C-z
 # get Ctrl+Left|Right to move by word
 set-window-option -g xterm-keys on
 
-# Local config
-if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
-
-
 # intuitive split keys
 bind-key \ split-window -h
 bind-key s split-window -h
@@ -76,5 +71,11 @@ set -g status-left-length 30
 set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
 
 # Use version specific configs
-if-shell "tmux -V | awk ' {split($2, ver, \".\"); if (ver[1] < 2) exit 1 ; else if (ver[1] == 2 && ver[2] < 1) exit 1 }' " 'source ~/.tmux/gt_2.0.conf' 'source ~/.tmux/lt_2.1.conf'
+run-shell 'tmux setenv -g TMUX_VERSION $(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+if-shell -b '[ "$(echo "$TMUX_VERSION < 2.1" | bc)" = 1 ]' 'source ~/.tmux/lt-2.1.conf'
+if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.1" | bc)" = 1 ]' 'source ~/.tmux/ge-2.1.conf'
+if-shell -b '[ "$(echo "$TMUX_VERSION < 2.2" | bc)" = 1 ]' 'source ~/.tmux/lt-2.2.conf'
+if-shell -b '[ "$(echo "$TMUX_VERSION < 2.4" | bc)" = 1 ]' 'source ~/.tmux/lt-2.4.conf'
+if-shell -b '[ "$(echo "$TMUX_VERSION < 2.9" | bc)" = 1 ]' 'source ~/.tmux/lt-2.9.conf'
+if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.9" | bc)" = 1 ]' 'source ~/.tmux/ge-2.9.conf'
 
