--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,9 @@
 # improve colors
-set-window-option -g automatic-rename on
-set-option -g set-titles on
-set-option -g set-clipboard off
+set -g default-terminal 'screen-256color'
+set -g set-titles on
+set -g set-clipboard off
 setw -g monitor-activity on
+setw -g automatic-rename on
 
 # set Ctrl-s prefix
 set -g prefix2 C-s
