Update kitty tabs

--- a/config/kitty/session.conf
+++ b/config/kitty/session.conf
@@ -1,21 +1,33 @@
 launch
 
-new_tab Homelab
+new_tab homelab
 cd ~/Projects/homelab
 launch --cwd=~/Projects/homelab/inventory
 launch --cwd=~/Projects/homelab/playbooks
-launch --cwd=~/Projects/homelab/ocp-secrets
-launch --cwd=~/Projects/homelab/ocp-config
-launch
+launch --cwd=~/Projects/homelab/ocp-secrets --env http_proxy=socks5://localhost:8000 --env https_proxy=socks5://localhost:8000
+launch --cwd=~/Projects/homelab/ocp-config  --env http_proxy=socks5://localhost:8000 --env https_proxy=socks5://localhost:8000
+launch --cwd=~/Projects/homelab/ocp-projects --env http_proxy=socks5://localhost:8000 --env https_proxy=socks5://localhost:8000
 launch
 
-new_tab Engagement Simulator
+new_tab homelab/example-app
+cd ~/Projects/homelab/example-app
+launch --cwd=~/Projects/homelab/example-app/greeting-service-k8s --env http_proxy=socks5://localhost:8000 --env https_proxy=socks5://localhost:8000
+launch --cwd=~/Projects/homelab/example-app/greeting-service
+launch --cwd=~/Projects/homelab/example-app/greeting-ui-k8s --env http_proxy=socks5://localhost:8000 --env https_proxy=socks5://localhost:8000
+launch --cwd=~/Projects/homelab/example-app/greeting-ui
+
+new_tab engagment-sim
 cd ~/Projects/engagement-simulator
 launch --cwd=~/Projects/engagement-simulator/api
 launch --cwd=~/Projects/engagement-simulator/ui
 
-new_tab Yougo
+new_tab yougo
 cd ~/Projects/yougo
 launch --cwd=~/Projects/yougo/api
 launch --cwd=~/Projects/yougo/ui
 launch --cwd=~/Projects/yougo/k8s
+
+new_tab xiv
+cd ~/Projects/xiv
+launch --cwd=~/Projects/xiv/actions-api
+launch --cwd=~/Projects/xiv/xiv-tools-ui
