--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -18,3 +18,4 @@ touch_scroll_multiplier 5.0
 # keyboard shortcuts
 map ctrl+pgup previous_tab
 map ctrl+pgdn next_tab
+map kitty_mod+enter new_window_with_cwd
