--- a/testcontainers.properties
+++ b/testcontainers.properties
@@ -1,4 +1,4 @@
 #Modified by Testcontainers
-#Mon Dec 19 09:41:43 GMT 2022
+#Wed Nov 15 23:15:20 AEDT 2023
 ryuk.container.privileged=true
-testcontainers.reuse.enable=false
+testcontainers.reuse.enable=true
