--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,6 @@
 # improve colors
 set -g default-terminal 'screen-256color'
+set -g mouse on
 set -g set-titles on
 set -g set-clipboard off
 setw -g monitor-activity on
@@ -39,7 +40,7 @@ unbind-key C-z
 set-window-option -g xterm-keys on
 
 # intuitive split keys
-bind-key \ split-window -h
+bind-key \\ split-window -h
 bind-key s split-window -h
 bind-key - split-window -v
 bind-key v split-window -v
