--- a/config/kitty/session.conf
+++ b/config/kitty/session.conf
@@ -1,13 +1,2 @@
 launch
-
-new_tab homelab
-launch --cwd=~/Projects/homelab/inventory
-launch --cwd=~/Projects/homelab/playbooks
-launch --cwd=~/Projects/homelab/ocp-secrets --env http_proxy=socks5://localhost:8000 --env https_proxy=socks5://localhost:8000
-launch --cwd=~/Projects/homelab/ocp-config --env http_proxy=socks5://localhost:8000 --env https_proxy=socks5://localhost:8000
-launch --cwd=~/Projects/homelab/ocp-tenants --env http_proxy=socks5://localhost:8000 --env https_proxy=socks5://localhost:8000
-launch --cwd=~/Projects/homelab
-
-new_tab tierlists
-launch --cwd=~/Projects/personal/tierlists/ui
-launch --cwd=~/Projects/personal/tierlists/api
+launch
